neu skeumorphic design, ev works. might need to fix some of the overflow scrolls

--- a/components/beer/beer.module.css
+++ b/components/beer/beer.module.css
@@ -2,16 +2,66 @@
     /* width: 300px; */
     height: 450px;
 
-    background-color: coral;
     display: flex;
     flex-direction: column;
-    justify-content: space-around;
+    justify-content: flex-end;
     align-items: center;
     position: relative;
+    border-radius: 15px;
+    /* box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.15); */
+    padding: 20px;
+
+    border-radius: 32px;
+    background: #f0f0f0;
+    box-shadow:  8px 8px 16px #d8d8d8,
+             -8px -8px 16px #ffffff;
 }
 
 .reverse {
-    display: none;
+    /* display: none; */
+    position: absolute;
+    top: 0;
+    left: 0;
+    /* overflow: scroll; */
+    padding: 1.5rem;
+    padding-top: 3rem;
+    width: 100%;
+    height: 100%;
+    border-radius: 32px;
+    background: white;
+    overflow: auto;
+    cursor: pointer;
+    opacity: 0;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    transition: opacity 300ms ease-in-out;
+}
+
+.reverse:hover {
+    opacity: 0.9;
+}
+
+.description {
+    /* background-color: violet; */
+    height: 70%;
+    overflow: auto;
+}
+
+.description span {
+    /* font-weight: 600; */
+    text-decoration: underline;
+}
+
+.reverse h6 {
+    font-family: var(--ff-second);
+    margin-bottom: 1rem;
+}
+
+.description p {
+    margin-bottom: 1rem;
+    font-weight: 600;
 }
 
 .beer img {
@@ -23,19 +73,49 @@
 }
 
 .beer h4 {
-    color: var(--pink);
-  
+    /* color: var(--pink); */
+    font-size: 1.5rem;
+    text-align: center;
+    position: relative;
+    z-index: 5;
+    display: inline-block;
+    width: 100%;
+    margin: 1rem;
+    
+}
 
+.beer h4::after {
+    content: '';
+    background-color: black;
+    width: 100%;
+    height: 1px;
+    position: absolute;
+    bottom: -8px;
+    /* bottom: 0; */
+    left: 0;
+    z-index: 0;
+    /* box-shadow: 0px 4px 4px hsl(300, 76%, 72%); */
+}
+
+.beer h6 {
+    font-size: 1rem;
+}
+
+.abv, .ibu {
+    font-weight: 600;
+    font-style: italic;
+    z-index: 5;
+    
 }
 
 .abv {
     position: absolute;
-    top: 10px;
-    left: 10px;
+    top: 20px;
+    left: 24px;
 }
 
 .ibu {
     position: absolute;
-    top: 10px;
-    right: 10px;
+    top: 20px;
+    right: 24px;
 }
