--- a/components/beers/beers.module.css
+++ b/components/beers/beers.module.css
@@ -1,7 +1,6 @@
 .beers {
-    color: blueviolet;
     display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(280px, 1fr));
-    grid-gap: 1rem;
-    border: 1px black dashed;
+    grid-template-columns: repeat(auto-fill, minmax(320px, 1fr));
+    grid-gap: 2rem;
+    padding: 2rem;
 }
