--- a/components/filters/filters.module.css
+++ b/components/filters/filters.module.css
@@ -1,19 +1,88 @@
 .container {
     width: 100%;
     /* height: 200px; */
-    background-color: green;
+    /* background-color: green; */
     display: flex;
     flex-direction: column;
+    align-items: center;
 }
 
 .filter { 
-    border: 1px black dashed;
+    background-color: lightgray;
+    width: 350px;
+    /* width: fit-content; */
+    display: flex;
+    font-size: 2rem;
+    justify-content: center;
+    align-items: baseline;
+    border-radius: 15px;
+    margin: 20px; 
+    margin-top: 0;
+    /* box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.15); */
+    border-radius: 16px;
+    background: #f0f0f0;
+    box-shadow:  8px 8px 8px #d8d8d8,
+                -8px -8px 8px #ffffff;
+
+}
+
+.filter__label {
+    width: 100px;
+    padding: 1rem;
+    font-family: var(--ff-second);
 }
 
 .filter__form {
+    height: 75px;
+}
 
+.filter__form {
+    /* background-color: orange; */
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: flex-end;
 }
 
 .filter__all {
+    font-size: 2rem;
+}
+
+
+.filter__pages {
+    width: fit-content;
+   
+    display: flex;
+    align-items: center;
+
     
+}
+
+.filter__text {
+    font-size: 2rem;
+    width: 150px;
+    text-align: center;
+}
+
+.page__btn {
+    /* width: 50px;
+    height: 50px; */
+    outline: none;
+    background-color: lightgray;
+    border: none;
+    border-radius: 20%;
+    margin: 10px;
+    padding: 1rem;
+    font-size: 1rem;
+    /* box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.15); */
+    font-family: var(--ff-second);
+    font-size: 1.5rem;
+
+    border-radius: 16px;
+    background: #f0f0f0;
+    box-shadow:  8px 8px 8px #d8d8d8,
+                -8px -8px 8px #ffffff;
+
+    transition:  300ms ease;
+
 }
