--- a/components/layout/layout.module.css
+++ b/components/layout/layout.module.css
@@ -1,12 +1,16 @@
 
 
-
 .wrapper {
-    background-color: crimson;
     width: 100%;
     display: flex;
     flex-direction: column;
     justify-content: center;
+    
 }
 
 
+
+/* Main font Roboto thin, Roboto light italic
+font-family: 'Roboto', sans-serif;
+Secondary font Space G medium
+font-family: 'Space Grotesk', sans-serif;  */
